<resources>
    <!--    <string name="app_name">My Application</string>-->
    <string name="greet">Welcome! Jay Swaminarayan 🙏Please Login Below</string>
    <!-- App Info -->
    <string name="app_name1">HabitMate</string>
    <string name="splash_tagline">Track. Improve. Succeed.</string>

    <string name="app_name">HabitTracker</string>
    <string-array name="frequency_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string name="desc_progress">View Progress</string>
    <string-array name="category_array">
        <item>All</item>
        <item>General</item>
        <item>Health</item>
        <item>Fitness</item>
        <item>Study</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>

    <string name="logout_desc">Logout</string>

    <!-- Common -->
    <string name="btn_add_habit">Add Habit</string>
    <string name="btn_mark_done">Mark as Done</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Dashboard -->
    <string name="dashboard_title">My Habits</string>
    <string name="empty_message">No habits yet. Click + to add one!</string>

    <!-- Add Habit -->
    <string name="hint_habit_name">Enter habit name</string>
    <string name="hint_habit_desc">Enter description</string>
    <string name="hint_habit_frequency">Frequency (Daily/Weekly)</string>
    <string name="hint_habit_target">Target days</string>

    <!-- Habit Detail -->
    <string name="habit_detail">Habit Details</string>
    <string name="last_completed">Last Completed:</string>

    <!-- Dialog -->
    <string name="confirm_delete">Are you sure you want to delete this habit?</string>
    <string name="view_progress">View Progress</string>
    <string name="search_habit">Search habit</string>
    <string name="habit_details">Habit Details</string>
    <string name="habit_name">Habit Name</string>
    <string name="description">Description</string>
    <string name="completed">Completed</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="frequency">Frequency</string>
    <string name="your_habit_progress">Your Habit Progress</string>
    <string name="_0">0</string>
    <string name="total_habits">Total Habits</string>
    <string name="_0pr">0%</string>
    <string name="completion">Completion</string>
    <string name="keep_going_you_can_achieve_great_things">Keep going! You can achieve great things 💪</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>


</resources>
